--- a/index.html
+++ b/index.html
@@ -74,18 +74,21 @@ body { padding-top: 75px; }
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/meatloaf.png">
+          <a href="about.html"><img src="img/meatloaf.png"></a>
            <div class="carousel-caption">
             <h3>About</h3>
-            <p>Description</p>
+            <p>We serve a wholesome, freshly made meal each Saturday – one that we are happy to eat ourselves – 
+in a respectful atmosphere to anyone who comes through our doors, no questions asked. 
+We provide a welcoming place of respite for our guests and offer vital social services to those in need. 
+We do this with an all-volunteer staff, without a single employee.</p>
           </div>
         </div><!-- End Item -->
  
          <div class="item">
-          <img src="img/meatloaf.png">
+          <a href="services.html"><img src="img/meatloaf.png" a href="services.html"></a>
            <div class="carousel-caption">
-            <h3>Headline</h3>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+            <h3>Volunteer</h3>
+            <p>University Community Social Services is staffed entirely by volunteers. There would be no soup kitchen without you!</p>
           </div>
         </div><!-- End Item -->
         
