--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
         <!-- Image Header -->
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="">
+                <img class="img-responsive" src="img/soup.jpg" alt="">
             </div>
         </div>
         <!-- /.row -->
@@ -89,7 +89,7 @@
                     </li>
                     <li class=""><a href="#service-three" data-toggle="tab"><i class="fa fa-support"></i> How can I apply?</a>
                     </li>
-                    <li class=""><a href="#service-four" data-toggle="tab"><i class="fa fa-database"></i> Service Four</a>
+                    <li class=""><a href="#service-four" data-toggle="tab"><i class="fa fa-database"></i> What should I know?</a>
                     </li>
                 </ul>
 
