--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body { padding-top: 75px; }
                     <span class="sr-only">Toggle navigation</span>
 
                 </button>
-                <a class="navbar-brand" href="index.html">Meatloaf Kitchen Desu ^_^</a>
+                <a class="navbar-brand" href="index.html">Meatloaf Kitchen</a>
              <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -109,7 +109,7 @@ We do this with an all-volunteer staff, without a single employee.</p>
         </div><!-- End Item -->
         
         <div class="item">
-          <img src="img/donate.jpg">
+          <a href="pricing.html"><img src="img/donate.jpg"></a>
            <div class="carousel-caption">
             <h3>Donate</h3>
             <p>University Community Social Services is a 501(c)(3) non-profit organization that depends on donations from people like you to continue our work. Despite our name, we are not affiliated with any university, nor are we affiliated with any religious organization. We are all-volunteer run, without a single employee, so 95 cents of every dollar you give goes towards providing meals and services to our guests.</p>
