--- a/services.html
+++ b/services.html
@@ -223,6 +223,12 @@ We give school credit for community work but are not able to give credit for cou
 
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
+    <script>
+
+    $("button").click(function() {
+    alert("Thank you, your application has been sent."); 
+});
+    </script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
